Add 30px left and right margins to all HTML files

--- a/WINTER 25-26 COURSE UPDATES/1 Start Here/Course Orientation.html
+++ b/WINTER 25-26 COURSE UPDATES/1 Start Here/Course Orientation.html
@@ -17,7 +17,7 @@
 <link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-<div class="content">
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
 <div class="user_content">
 <div class="">
 <div>
@@ -164,5 +164,5 @@
 <p><a href="https://usucourses.instructure.com/courses/2879/pages/course-orientation" target="_blank">View original page on Canvas</a></p>
 </div>
 </div> <!-- end content -->
-</body>
+</div></div></body>
 </html>
