--- a/WINTER 25-26 COURSE UPDATES/1 Start Here/Terms of Use.html
+++ b/WINTER 25-26 COURSE UPDATES/1 Start Here/Terms of Use.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Terms of Use: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Terms of Use: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
 <p>You must accept the <strong>Terms of Use</strong> before you will be granted access to the Course Modules:</p>
 <ol>
 <li>Read through all of the information on this page.</li>
-<li>Complete the <a title="Terms of Use" href="https://usucourses.instructure.com/courses/2879/assignments/56921" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/assignments/56921" data-api-returntype="Assignment">Terms of Use quiz</a>.</li>
+<li>Complete the <a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/assignments/56921" data-api-returntype="Assignment" href="https://usucourses.instructure.com/courses/2879/assignments/56921" title="Terms of Use">Terms of Use quiz</a>.</li>
 </ol>
 </div>
 <div class="topSpace">
 <h1><span style="font-size: 1.5em; color: #1c205b;">Terms of Use for WebAIM Online Courses</span></h1>
 <h2><span style="font-size: 24pt;">Privacy</span></h2>
-<p>WebAIM respects your privacy. We do not collect personally identifiable information about you unless you voluntarily provide it. If you voluntarily provide your email address or other contact information as part of your course registration, we might also use it to inform you of changes to the Course, to survey you about your use or opinion of the Course, or provide you with special offers related to WebAIM Online Courses, or other WebAIM services. At your request, we will remove your contact information from our files.<span><br></span><span><br></span>WebAIM does not make your contact information or any other personally identifiable information available to anyone outside WebAIM unless we are legally required to do so.<br><br>When we report information about WebAIM access, use, and impact, we report aggregate, non-personally identifiable data, unless requested by you, or a third party (e.g., an employer, a professional organization, etc.) that provided your enrollment in the course. Occasionally, we report quoted feedback from users. We do not attribute feedback to specific individuals unless we obtain permission to use that person's name along with the feedback.</p>
+<p>WebAIM respects your privacy. We do not collect personally identifiable information about you unless you voluntarily provide it. If you voluntarily provide your email address or other contact information as part of your course registration, we might also use it to inform you of changes to the Course, to survey you about your use or opinion of the Course, or provide you with special offers related to WebAIM Online Courses, or other WebAIM services. At your request, we will remove your contact information from our files.<span><br/></span><span><br/></span>WebAIM does not make your contact information or any other personally identifiable information available to anyone outside WebAIM unless we are legally required to do so.<br/><br/>When we report information about WebAIM access, use, and impact, we report aggregate, non-personally identifiable data, unless requested by you, or a third party (e.g., an employer, a professional organization, etc.) that provided your enrollment in the course. Occasionally, we report quoted feedback from users. We do not attribute feedback to specific individuals unless we obtain permission to use that person's name along with the feedback.</p>
 <h2>Grant of Use</h2>
 <p>In consideration of your payment, we hereby grant you permission to use and access the WebAIM Online Course. This use is limited, revocable, non-exclusive, non-sublicensable and non-transferable, and is subject to the rights and obligations granted under these Terms. This permission is personal to you and cannot be shared or exchanged with others.</p>
 <h2>General</h2>
@@ -37,11 +37,11 @@
 <p class="p1">Any and all right, title, and interest in or to the intellectual property (including, but not limited to, copyrights and trademarks) associated with the Course resides in Utah State University. You shall not copy, modify, transmit, distribute or in any way exploit the Course or any other copyrighted materials provided other than to support your training as an individual. Any other purpose is expressly prohibited under these terms. You shall also not permit anyone else to copy, use, modify, transmit, distribute or in any way exploit the Course or any other copyrighted materials. We provide the materials ‘as is’ and without any warranties, whether express or implied, except those that cannot be excluded under statute. We also do not warrant that the materials will be error free, including technical inaccuracies.</p>
 <h2>Accessing the Materials</h2>
 <p>The starting date of your access to the Course is deemed to be the date that you first have access. Unless otherwise stated, your access period for the Course is 60 days (excluding weekends and U.S. holidays) from the Course start date. It is your responsibility to ensure that you complete the content within the allocated time period. If you do not think this will be possible, and make a reasonable effort to contact us at least one week before the closing date, then we may provide you with an extension of time at our sole discretion.</p>
-<p>We will take all commercially reasonable steps to provide you with uninterrupted access to the Course. However, your access may be restricted from time to time for reasons beyond our control. Such reasons include force majeure events, power outages and actions from computer hackers and others acting outside the law. Your access may also be interrupted due to software and software as a service issues, server downtime, increased Internet traffic, programming errors, regular maintenance and other related reasons. Where this is the case, we will take commercially reasonable steps to restore your full access within a reasonable period of time. ‘Commercially reasonable’ in these terms shall mean reasonable efforts taken in good faith, without an unduly burdensome use or expenditure of time, resources, personnel or money.<span><br></span><span><br></span>Our joint aim is to provide courses and materials of the highest quality. As such, improvements or changes to the Course or any other materials may occur at any time without prior notification in order to ensure that they are up to date and accurate. Where your access to the Course is restricted for any of the above reasons, we may provide you with a free extension of time at our sole discretion.</p>
+<p>We will take all commercially reasonable steps to provide you with uninterrupted access to the Course. However, your access may be restricted from time to time for reasons beyond our control. Such reasons include force majeure events, power outages and actions from computer hackers and others acting outside the law. Your access may also be interrupted due to software and software as a service issues, server downtime, increased Internet traffic, programming errors, regular maintenance and other related reasons. Where this is the case, we will take commercially reasonable steps to restore your full access within a reasonable period of time. ‘Commercially reasonable’ in these terms shall mean reasonable efforts taken in good faith, without an unduly burdensome use or expenditure of time, resources, personnel or money.<span><br/></span><span><br/></span>Our joint aim is to provide courses and materials of the highest quality. As such, improvements or changes to the Course or any other materials may occur at any time without prior notification in order to ensure that they are up to date and accurate. Where your access to the Course is restricted for any of the above reasons, we may provide you with a free extension of time at our sole discretion.</p>
 <h2>Refunds, Reinstatements, &amp; Re-enrollments</h2>
 <p><strong>Please note:</strong> All requests must be sent to <a href="mailto:accessibledocs@webaim.org">accessibledocs@webaim.org</a>. Any requests made by phone or through Canvas Catalog's messaging system <strong>will NOT be processed</strong>.</p>
 <h3>Refunds</h3>
-<p><span>Individual participants may receive a full refund of any payment by notifying WebAIM by email (</span><a href="mailto:accessibledocs@webaim.org"><span>accessibledocs@webaim.org</span></a><span>) prior to the course Start Date. Any refund after the Start Date is at our sole discretion. No refund will be provided after two weeks (the second Sunday after the course start date). An approved refund is issued to the individual or entity that made the payment.</span><span><br></span></p>
+<p><span>Individual participants may receive a full refund of any payment by notifying WebAIM by email (</span><a href="mailto:accessibledocs@webaim.org"><span>accessibledocs@webaim.org</span></a><span>) prior to the course Start Date. Any refund after the Start Date is at our sole discretion. No refund will be provided after two weeks (the second Sunday after the course start date). An approved refund is issued to the individual or entity that made the payment.</span><span><br/></span></p>
 <h3>Reinstatements</h3>
 <p>If your enrollment in the course was provided to you through a third party (e.g., an employer, a professional organization, etc.), and you wish to cancel your participation in the course, the original purchaser of the enrollment must notify WebAIM by email (<a href="mailto:accessibledocs@webaim.org">accessibledocs@webaim.org</a>) prior to the course Start Date for the enrollment code to be reinstated.</p>
 <p>Any reinstatements after the Start Date are at our sole discretion. No reinstatement will be provided after two weeks (the second Sunday after the course start date).</p>
@@ -50,10 +50,10 @@
 <h2>Use of the WebAIM Name</h2>
 <p>WebAIM and its logos and seal are trademarks of Utah State University (USU). Without written permission from WebAIM for your specific use, you may not use the WebAIM name in any of its forms nor WebAIM seals or logos for promotional purposes, or in any way that deliberately or inadvertently claims, suggests, or in WebAIM's sole judgment gives the appearance or impression of a relationship with or endorsement by WebAIM.</p>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121439" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121439" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
