--- a/WINTER 25-26 COURSE UPDATES/2 Module 1_ Document Content/Section 1_ Overview of Document Accessibility.html
+++ b/WINTER 25-26 COURSE UPDATES/2 Module 1_ Document Content/Section 1_ Overview of Document Accessibility.html
@@ -1,109 +1,109 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Section 1: Overview of Document Accessibility: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Section 1: Overview of Document Accessibility: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
-    <p><a class="Button" title="Module 1: Document Content" href="https://usucourses.instructure.com/courses/2879/pages/module-1-document-content" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-1-document-content" data-api-returntype="Page">Return to Module 1</a></p>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-1-document-content" data-api-returntype="Page" data-course-type="wikiPages" data-published="true" href="https://usucourses.instructure.com/courses/2879/pages/module-1-document-content" title="Module 1: Document Content">Return to Module 1</a></p>
 </div>
 <div>
-    <h2>Objectives</h2>
-    <ul>
-        <li><strong>State</strong> four types of disabilities that can impact the use of electronic documents.</li>
-        <li><strong>Describe</strong> the meaning of POUR.</li>
-    </ul>
+<h2>Objectives</h2>
+<ul>
+<li><strong>State</strong> four types of disabilities that can impact the use of electronic documents.</li>
+<li><strong>Describe</strong> the meaning of POUR.</li>
+</ul>
 </div>
 <div>
-    <h2>Learning Activities</h2>
-    <ul>
-        <li><a title="Overview Of Document Accessibility Part 1" href="https://usucourses.instructure.com/courses/2879/pages/overview-of-document-accessibility-part-1" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/overview-of-document-accessibility-part-1" data-api-returntype="Page"><strong>Overview of Doc Accessibility: Part 1</strong> | Video (6:02) | Guide</a></li>
-        <li><a title="Overview of Document Accessibility: Part 2" href="https://usucourses.instructure.com/courses/2879/pages/overview-of-document-accessibility-part-2" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/overview-of-document-accessibility-part-2" data-api-returntype="Page"><strong>Overview of Doc Accessibility: Part 2</strong> | Video (4:47) | Guide</a></li>
-    </ul>
+<h2>Learning Activities</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/overview-of-document-accessibility-part-1" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/overview-of-document-accessibility-part-1" title="Overview Of Document Accessibility Part 1"><strong>Overview of Doc Accessibility: Part 1</strong> | Video (6:02) | Guide</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/overview-of-document-accessibility-part-2" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/overview-of-document-accessibility-part-2" title="Overview of Document Accessibility: Part 2"><strong>Overview of Doc Accessibility: Part 2</strong> | Video (4:47) | Guide</a></li>
+</ul>
 </div>
 <div>
-    <h2>Resource Links</h2>
-    <ul>
-        <li><strong>Disabilities by Type</strong>
-            <ul>
-                <li>Auditory
+<h2>Resource Links</h2>
+<ul>
+<li><strong>Disabilities by Type</strong>
+<ul>
+<li>Auditory
                     <ul>
-                        <li>Deafness
+<li>Deafness
                             <ul>
-                                <li><a href="https://www.nad.org/resources/" target="_blank">National Association of the Deaf (NAD)</a></li>
-                                <li><a href="http://www.who.int/mediacentre/factsheets/fs300/en/" target="_blank">World Health Organization (WHO) statistics</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>Cognitive
+<li><a href="https://www.nad.org/resources/" target="_blank">National Association of the Deaf (NAD)</a></li>
+<li><a href="http://www.who.int/mediacentre/factsheets/fs300/en/" target="_blank">World Health Organization (WHO) statistics</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li>Cognitive
                     <ul>
-                        <li><a href="http://ncdae.org/resources/articles/cognitive/" target="_blank">Cognitive Disabilities and the Web</a></li>
-                    </ul>
-                </li>
-                <li>&nbsp;Learning
+<li><a href="http://ncdae.org/resources/articles/cognitive/" target="_blank">Cognitive Disabilities and the Web</a></li>
+</ul>
+</li>
+<li> Learning
                     <ul>
-                        <li><a href="https://ldaamerica.org/resources/" target="_blank">Learning Disabilities Association of America</a></li>
-                        <li><a href="https://ldaamerica.org/types-of-learning-disabilities/" target="_blank">Types of Learning Disabilities</a></li>
-                    </ul>
-                </li>
-                <li>Motor
+<li><a href="https://ldaamerica.org/resources/" target="_blank">Learning Disabilities Association of America</a></li>
+<li><a href="https://ldaamerica.org/types-of-learning-disabilities/" target="_blank">Types of Learning Disabilities</a></li>
+</ul>
+</li>
+<li>Motor
                     <ul>
-                        <li><a href="https://webaim.org/articles/motor/assistive" target="_blank">Assistive Technologies</a></li>
-                        <li><a href="https://webaim.org/articles/motor/motordisabilities" target="_blank">Types of Motor Disabilities</a></li>
-                    </ul>
-                </li>
-                <li>Visual
+<li><a href="https://webaim.org/articles/motor/assistive" target="_blank">Assistive Technologies</a></li>
+<li><a href="https://webaim.org/articles/motor/motordisabilities" target="_blank">Types of Motor Disabilities</a></li>
+</ul>
+</li>
+<li>Visual
                     <ul>
-                        <li>Blindness
+<li>Blindness
                             <ul>
-                                <li><a href="http://acb.org/" target="_blank">American Council of the Blind</a></li>
-                                <li><a class="inline_disabled" href="https://www.afb.org/" target="_blank">American Foundation for the Blind</a></li>
-                                <li><a class="inline_disabled" href="https://www.nei.nih.gov/" target="_blank">National Eye Institute (NEI)</a></li>
-                                <li><a href="https://nfb.org/resources" target="_blank">National Federation of the Blind</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="https://www.aao.org/eye-health/diseases/what-is-color-blindness" target="_blank">Color Vision Deficiency (Color Blindness)</a></li>
-                        <li><a href="https://www.aao.org/eye-health/diseases/low-vision" target="_blank">Low Vision</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-        <li><strong>Web Accessibility Initiative (WAI)</strong>
-            <ul>
-                <li><a href="https://www.w3.org/WAI/intro/people-use-web/browsing" target="_blank">Diversity in Web Use</a></li>
-                <li><a href="https://www.w3.org/WAI/intro/people-use-web/diversity" target="_blank">Diversity of Web Users</a></li>
-                <li><a href="https://www.w3.org/WAI/intro/people-use-web/stories" target="_blank">Stories of Web Users</a></li>
-            </ul>
-        </li>
-    </ul>
-    <h2>Quiz</h2>
-    <ul>
-        <li>Please review all<span>&nbsp;</span><strong>Section 1 Objectives</strong> <span>&nbsp;</span>before starting the Quiz.</li>
-        <li>You are free to use any resources that you have developed in the&nbsp;<strong>"open notes"</strong> <span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;<strong>thirty-six&nbsp;(36) minutes</strong> to complete <strong>six (6)</strong> multiple-choice qu</span>estions in the<span>&nbsp;</span><strong>timed</strong> <span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong> <span>&nbsp;</span>to&nbsp;retake this&nbsp;Quiz.</li>
-    </ul>
+<li><a href="http://acb.org/" target="_blank">American Council of the Blind</a></li>
+<li><a class="inline_disabled" href="https://www.afb.org/" target="_blank">American Foundation for the Blind</a></li>
+<li><a class="inline_disabled" href="https://www.nei.nih.gov/" target="_blank">National Eye Institute (NEI)</a></li>
+<li><a href="https://nfb.org/resources" target="_blank">National Federation of the Blind</a></li>
+</ul>
+</li>
+<li><a href="https://www.aao.org/eye-health/diseases/what-is-color-blindness" target="_blank">Color Vision Deficiency (Color Blindness)</a></li>
+<li><a href="https://www.aao.org/eye-health/diseases/low-vision" target="_blank">Low Vision</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><strong>Web Accessibility Initiative (WAI)</strong>
+<ul>
+<li><a href="https://www.w3.org/WAI/intro/people-use-web/browsing" target="_blank">Diversity in Web Use</a></li>
+<li><a href="https://www.w3.org/WAI/intro/people-use-web/diversity" target="_blank">Diversity of Web Users</a></li>
+<li><a href="https://www.w3.org/WAI/intro/people-use-web/stories" target="_blank">Stories of Web Users</a></li>
+</ul>
+</li>
+</ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review all<span> </span><strong>Section 1 Objectives</strong> <span> </span>before starting the Quiz.</li>
+<li>You are free to use any resources that you have developed in the <strong>"open notes"</strong> <span> </span>Quiz.</li>
+<li>You have<span> <strong>thirty-six (36) minutes</strong> to complete <strong>six (6)</strong> multiple-choice qu</span>estions in the<span> </span><strong>timed</strong> <span> </span>Quiz.</li>
+<li>You have<span> </span><strong>unlimited opportunities</strong> <span> </span>to retake this Quiz.</li>
+</ul>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121442" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121442" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
