--- a/WINTER 25-26 COURSE UPDATES/2 Module 1_ Document Content/Section 3_ Hyperlinks.html
+++ b/WINTER 25-26 COURSE UPDATES/2 Module 1_ Document Content/Section 3_ Hyperlinks.html
@@ -1,70 +1,70 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Section 3: Hyperlinks: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Section 3: Hyperlinks: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
-    <p><a class="Button" title="Module 1: Document Content" href="https://usucourses.instructure.com/courses/2879/pages/module-1-document-content" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-1-document-content" data-api-returntype="Page">Return to Module 1</a></p>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-1-document-content" data-api-returntype="Page" data-course-type="wikiPages" data-published="true" href="https://usucourses.instructure.com/courses/2879/pages/module-1-document-content" title="Module 1: Document Content">Return to Module 1</a></p>
 </div>
 <div>
-    <h2>Objectives</h2>
-    <ul>
-        <li><strong>State</strong> four characteristics of optimized link text.</li>
-        <li><strong>Identify</strong> the process for adding and editing <em>Hyperlinks</em>.</li>
-    </ul>
+<h2>Objectives</h2>
+<ul>
+<li><strong>State</strong> four characteristics of optimized link text.</li>
+<li><strong>Identify</strong> the process for adding and editing <em>Hyperlinks</em>.</li>
+</ul>
 </div>
 <div>
-    <h2>Learning Activities</h2>
-    <ul>
-        <li><a title="Optimizing Hyperlinks" href="https://usucourses.instructure.com/courses/2879/pages/optimizing-hyperlinks" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/optimizing-hyperlinks" data-api-returntype="Page"><strong>Optimizing <em>Hyperlinks </em></strong><em>|</em> Video (4:46) | Guide</a></li>
-        <li><a title="Adding and Editing Hyperlinks" href="https://usucourses.instructure.com/courses/2879/pages/adding-and-editing-hyperlinks" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/adding-and-editing-hyperlinks" data-api-returntype="Page"><strong>Adding and Editing <em>Hyperlinks</em></strong> | Video (4:12)<span>&nbsp;| Guide</span></a></li>
-    </ul>
+<h2>Learning Activities</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/optimizing-hyperlinks" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/optimizing-hyperlinks" title="Optimizing Hyperlinks"><strong>Optimizing <em>Hyperlinks </em></strong><em>|</em> Video (4:46) | Guide</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/adding-and-editing-hyperlinks" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/adding-and-editing-hyperlinks" title="Adding and Editing Hyperlinks"><strong>Adding and Editing <em>Hyperlinks</em></strong> | Video (4:12)<span> | Guide</span></a></li>
+</ul>
 </div>
 <div>
-    <h2>Resource Links</h2>
-    <ul>
-        <li>Microsoft&nbsp;Resources
+<h2>Resource Links</h2>
+<ul>
+<li>Microsoft Resources
             <ul>
-                <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#wordlinks" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23wordlinks" data-api-returntype="Page">Word</a></li>
-                <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#pptlinks" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23pptlinks" data-api-returntype="Page">PowerPoint</a></li>
-                <li>Videos
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23wordlinks" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#wordlinks">Word</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23pptlinks" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#pptlinks">PowerPoint</a></li>
+<li>Videos
                     <ul>
-                        <li><a href="https://support.office.com/en-us/article/video-create-accessible-links-in-word-28305cc8-3be2-417c-a313-dc22082d1ee0?ui=en-US&amp;rs=en-US&amp;ad=US" target="_blank">Create accessible links (2:09)</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-    </ul>
+<li><a href="https://support.office.com/en-us/article/video-create-accessible-links-in-word-28305cc8-3be2-417c-a313-dc22082d1ee0?ui=en-US&amp;rs=en-US&amp;ad=US" target="_blank">Create accessible links (2:09)</a></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
 </div>
 <div>
-    <h2>Quiz</h2>
-    <ul>
-        <li>Please review all<span>&nbsp;</span><strong>Section 3 Objectives</strong><span>&nbsp;</span>before starting the Quiz.</li>
-        <li>You are free to use any resources that you have developed in the&nbsp;<strong>"open notes"</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;</span><span style="background-color: #ffffff;"><strong>twenty-four&nbsp;(24) minutes</strong><span>&nbsp;</span>to complete<span>&nbsp;</span><strong>four (4)</strong><span>&nbsp;</span>multiple-c</span>hoice questions in the<span>&nbsp;</span><strong>timed</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong><span>&nbsp;</span>to&nbsp;retake this&nbsp;Quiz.</li>
-    </ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review all<span> </span><strong>Section 3 Objectives</strong><span> </span>before starting the Quiz.</li>
+<li>You are free to use any resources that you have developed in the <strong>"open notes"</strong><span> </span>Quiz.</li>
+<li>You have<span> </span><span style="background-color: #ffffff;"><strong>twenty-four (24) minutes</strong><span> </span>to complete<span> </span><strong>four (4)</strong><span> </span>multiple-c</span>hoice questions in the<span> </span><strong>timed</strong><span> </span>Quiz.</li>
+<li>You have<span> </span><strong>unlimited opportunities</strong><span> </span>to retake this Quiz.</li>
+</ul>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121446" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121446" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
