--- a/WINTER 25-26 COURSE UPDATES/3 Module 2_ Document Structure/Section 1_ Headings in Word.html
+++ b/WINTER 25-26 COURSE UPDATES/3 Module 2_ Document Structure/Section 1_ Headings in Word.html
@@ -1,66 +1,66 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Section 1: Headings in Word: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Section 1: Headings in Word: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
-    <p><a class="Button" title="Module 2: Document Structure" href="https://usucourses.instructure.com/courses/2879/pages/module-2-document-structure" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-2-document-structure" data-api-returntype="Page">Return to Module 2</a></p>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-2-document-structure" data-api-returntype="Page" data-course-type="wikiPages" data-published="true" href="https://usucourses.instructure.com/courses/2879/pages/module-2-document-structure" title="Module 2: Document Structure">Return to Module 2</a></p>
 </div>
 <div>
-    <h2>Objectives</h2>
-    <ul>
-        <li><strong>Describe</strong> how a screen reading software user navigates through a Word document with a heading structure.</li>
-        <li><strong>Explain</strong> the function of main headings, major headings, and subheadings.</li>
-        <li><strong>Describe</strong> the process for creating headings using the <em>Styles</em> gallery.</li>
-        <li><strong>State</strong> the method for checking that heading text has been added to the correct position in a document's heading structure.</li>
-        <li><strong>Identify</strong> the processes for modifying Heading styles.</li>
-        <li><strong>Identify</strong> the process for adding a <em>Table of Contents</em>.</li>
-    </ul>
+<h2>Objectives</h2>
+<ul>
+<li><strong>Describe</strong> how a screen reading software user navigates through a Word document with a heading structure.</li>
+<li><strong>Explain</strong> the function of main headings, major headings, and subheadings.</li>
+<li><strong>Describe</strong> the process for creating headings using the <em>Styles</em> gallery.</li>
+<li><strong>State</strong> the method for checking that heading text has been added to the correct position in a document's heading structure.</li>
+<li><strong>Identify</strong> the processes for modifying Heading styles.</li>
+<li><strong>Identify</strong> the process for adding a <em>Table of Contents</em>.</li>
+</ul>
 </div>
 <div>
-    <h2>Learning Activities</h2>
-    <ul>
-        <li><a title="The Importance of Headings" href="https://usucourses.instructure.com/courses/2879/pages/the-importance-of-headings" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/the-importance-of-headings" data-api-returntype="Page"><strong>The Importance of Headings</strong> |&nbsp;Video (3:49) | Example File | Guide</a></li>
-        <li><a title="Creating Headings" href="https://usucourses.instructure.com/courses/2879/pages/creating-headings" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-headings" data-api-returntype="Page"><strong>Creating <em>Headings </em></strong>|&nbsp;Video (5:27) | Example File | Guide</a></li>
-        <li><a title="Modifying Headings" href="https://usucourses.instructure.com/courses/2879/pages/modifying-headings" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/modifying-headings" data-api-returntype="Page"><strong>Modifying <em>Headings </em></strong>| Video <span>(3:16)</span>&nbsp;| Example Files | Guide</a></li>
-    </ul>
-    <ul>
-        <li><a title="Tables of Contents" href="https://usucourses.instructure.com/courses/2879/pages/tables-of-contents" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/tables-of-contents" data-api-returntype="Page"><strong>Tables of Contents </strong>| Video <span>(4:03)</span>&nbsp;| Example File | Guide</a></li>
-    </ul>
+<h2>Learning Activities</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/the-importance-of-headings" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/the-importance-of-headings" title="The Importance of Headings"><strong>The Importance of Headings</strong> | Video (3:49) | Example File | Guide</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-headings" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/creating-headings" title="Creating Headings"><strong>Creating <em>Headings </em></strong>| Video (5:27) | Example File | Guide</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/modifying-headings" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/modifying-headings" title="Modifying Headings"><strong>Modifying <em>Headings </em></strong>| Video <span>(3:16)</span> | Example Files | Guide</a></li>
+</ul>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/tables-of-contents" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/tables-of-contents" title="Tables of Contents"><strong>Tables of Contents </strong>| Video <span>(4:03)</span> | Example File | Guide</a></li>
+</ul>
 </div>
 <div>
-    <h2>Resource Links</h2>
-    <ul>
-        <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#headings" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23headings" data-api-returntype="Page">Microsoft Resources</a></li>
-    </ul>
-    <h2>Quiz</h2>
-    <ul>
-        <li>Please review all<span>&nbsp;</span><strong>Section 1 Objectives</strong><span>&nbsp;</span>before starting the Quiz.</li>
-        <li>You are free to use any resources that you have developed in the&nbsp;<strong>"open notes"</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;<strong>forty-eight (48) minutes</strong> to complete <strong>eight (8)</strong> multiple-choice qu</span>estions in the<span>&nbsp;</span><strong>timed</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong><span>&nbsp;</span>to&nbsp;retake the Quiz.</li>
-    </ul>
+<h2>Resource Links</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23headings" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#headings">Microsoft Resources</a></li>
+</ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review all<span> </span><strong>Section 1 Objectives</strong><span> </span>before starting the Quiz.</li>
+<li>You are free to use any resources that you have developed in the <strong>"open notes"</strong><span> </span>Quiz.</li>
+<li>You have<span> <strong>forty-eight (48) minutes</strong> to complete <strong>eight (8)</strong> multiple-choice qu</span>estions in the<span> </span><strong>timed</strong><span> </span>Quiz.</li>
+<li>You have<span> </span><strong>unlimited opportunities</strong><span> </span>to retake the Quiz.</li>
+</ul>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121454" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121454" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
