--- a/WINTER 25-26 COURSE UPDATES/3 Module 2_ Document Structure/Section 4_ Tables.html
+++ b/WINTER 25-26 COURSE UPDATES/3 Module 2_ Document Structure/Section 4_ Tables.html
@@ -1,61 +1,61 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Section 4: Tables: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Section 4: Tables: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
-    <p><a class="Button" title="Module 2: Document Structure" href="https://usucourses.instructure.com/courses/2879/pages/module-2-document-structure" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-2-document-structure" data-api-returntype="Page">Return to Module 2</a></p>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-2-document-structure" data-api-returntype="Page" data-course-type="wikiPages" data-published="true" href="https://usucourses.instructure.com/courses/2879/pages/module-2-document-structure" title="Module 2: Document Structure">Return to Module 2</a></p>
 </div>
 <div>
-    <h2>Objective</h2>
-    <ul>
-        <li><strong>State</strong> the process for identifying column and row headers in Word and PowerPoint tables.</li>
-    </ul>
+<h2>Objective</h2>
+<ul>
+<li><strong>State</strong> the process for identifying column and row headers in Word and PowerPoint tables.</li>
+</ul>
 </div>
 <div>
-    <h2>Learning Activities</h2>
-    <ul>
-        <li><a title="Tables" href="https://usucourses.instructure.com/courses/2879/pages/tables" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/tables" data-api-returntype="Page"><strong>Tables</strong> | Video (6:10) | Example File | Guide</a></li>
-    </ul>
+<h2>Learning Activities</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/tables" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/tables" title="Tables"><strong>Tables</strong> | Video (6:10) | Example File | Guide</a></li>
+</ul>
 </div>
 <div>
-    <h2>Resource Links</h2>
-    <ul>
-        <li>Microsoft Resources
+<h2>Resource Links</h2>
+<ul>
+<li>Microsoft Resources
             <ul>
-                <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#wordtables" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23wordtables" data-api-returntype="Page">Word</a></li>
-                <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#ppttables" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23ppttables" data-api-returntype="Page">PowerPoint</a></li>
-            </ul>
-        </li>
-    </ul>
-    <h2>Quiz</h2>
-    <ul>
-        <li>Please review the<span>&nbsp;</span><strong>Section 4 Objective</strong><span>&nbsp;</span>before starting the Quiz.</li>
-        <li>You are free to use any resources that you have developed in the&nbsp;<strong>"open notes"</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;<strong>twenty-four&nbsp;(24) minutes</strong> to complete four<strong>&nbsp;(4)</strong> multiple-choice qu</span>estions in the<span>&nbsp;</span><strong>timed</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong><span>&nbsp;</span>to&nbsp;retake this&nbsp;Quiz.</li>
-    </ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23wordtables" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#wordtables">Word</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23ppttables" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#ppttables">PowerPoint</a></li>
+</ul>
+</li>
+</ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review the<span> </span><strong>Section 4 Objective</strong><span> </span>before starting the Quiz.</li>
+<li>You are free to use any resources that you have developed in the <strong>"open notes"</strong><span> </span>Quiz.</li>
+<li>You have<span> <strong>twenty-four (24) minutes</strong> to complete four<strong> (4)</strong> multiple-choice qu</span>estions in the<span> </span><strong>timed</strong><span> </span>Quiz.</li>
+<li>You have<span> </span><strong>unlimited opportunities</strong><span> </span>to retake this Quiz.</li>
+</ul>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121460" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121460" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
