--- a/WINTER 25-26 COURSE UPDATES/4 Module 3_ Evaluating Accessibility & Creating PDFs/Section 2_ Practicing Evaluation & Repair.html
+++ b/WINTER 25-26 COURSE UPDATES/4 Module 3_ Evaluating Accessibility & Creating PDFs/Section 2_ Practicing Evaluation & Repair.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Section 2: Practicing Evaluation &amp;amp;amp;amp;amp;amp;amp;amp; Repair: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Section 2: Practicing Evaluation &amp;amp;amp;amp;amp;amp;amp;amp; Repair: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
-    <p><a class="Button" title="Module 3: Evaluating Accessibility &amp; Creating PDFs" href="https://usucourses.instructure.com/courses/2879/pages/module-3-evaluating-accessibility-and-creating-pdfs" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-3-evaluating-accessibility-and-creating-pdfs" data-api-returntype="Page">Return to Module 3</a></p>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-3-evaluating-accessibility-and-creating-pdfs" data-api-returntype="Page" data-course-type="wikiPages" data-published="true" href="https://usucourses.instructure.com/courses/2879/pages/module-3-evaluating-accessibility-and-creating-pdfs" title="Module 3: Evaluating Accessibility &amp; Creating PDFs">Return to Module 3</a></p>
 </div>
 <div>
-    <h2>Objectives</h2>
-    <ul>
-        <li><strong>Reinforce</strong> the process for evaluating accessibility by evaluating and repairing two example files.</li>
-        <li><strong>Assess</strong> your practice session by reviewing the two repaired example files.</li>
-        <li><strong>Describe</strong><span>&nbsp;</span>one way a document's filename may be used by assistive technology.</li>
-        <li><strong>Identify</strong><span>&nbsp;</span>the process for adding a Title to a document in Word and PowerPoint.</li>
-    </ul>
+<h2>Objectives</h2>
+<ul>
+<li><strong>Reinforce</strong> the process for evaluating accessibility by evaluating and repairing two example files.</li>
+<li><strong>Assess</strong> your practice session by reviewing the two repaired example files.</li>
+<li><strong>Describe</strong><span> </span>one way a document's filename may be used by assistive technology.</li>
+<li><strong>Identify</strong><span> </span>the process for adding a Title to a document in Word and PowerPoint.</li>
+</ul>
 </div>
 <div>
-    <h2>Learning Activities</h2>
-    <ul>
-        <li><a title="Practicing Evaluation &amp; Repair" href="https://usucourses.instructure.com/courses/2879/pages/practicing-evaluation-and-repair" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/practicing-evaluation-and-repair" data-api-returntype="Page"><strong>Practicing Evaluation &amp; Repair</strong> | Video (1:23) | Example Files | Guide</a></li>
-        <li><a title="Filename &amp; Document Title" href="https://usucourses.instructure.com/courses/2879/pages/filename-and-document-title" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/filename-and-document-title" data-api-returntype="Page"><strong>Filename &amp; Document Title</strong> | Video (3:18) | Guide</a></li>
-    </ul>
+<h2>Learning Activities</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/practicing-evaluation-and-repair" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/practicing-evaluation-and-repair" title="Practicing Evaluation &amp; Repair"><strong>Practicing Evaluation &amp; Repair</strong> | Video (1:23) | Example Files | Guide</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/filename-and-document-title" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/filename-and-document-title" title="Filename &amp; Document Title"><strong>Filename &amp; Document Title</strong> | Video (3:18) | Guide</a></li>
+</ul>
 </div>
 <div>
-    <h2>Resource Links</h2>
-    <ul>
-        <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#checker" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23checker" data-api-returntype="Page">Microsoft Resources</a></li>
-    </ul>
-    <h2>Quiz</h2>
-    <ul>
-        <li>Please review all<span>&nbsp;</span><strong>Section 2 Objectives</strong><span>&nbsp;</span>before starting this Quiz.</li>
-        <li>You are free to use any resources that you have developed in this&nbsp;<strong>"open notes"</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span><strong>&nbsp;twenty-four (24)</strong>&nbsp;minutes to complete <strong>four (4)</strong>&nbsp;multiple-choice qu</span>estions in this<span>&nbsp;</span><strong>timed</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong><span>&nbsp;</span>to&nbsp;retake this&nbsp;Quiz.</li>
-    </ul>
+<h2>Resource Links</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23checker" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#checker">Microsoft Resources</a></li>
+</ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review all<span> </span><strong>Section 2 Objectives</strong><span> </span>before starting this Quiz.</li>
+<li>You are free to use any resources that you have developed in this <strong>"open notes"</strong><span> </span>Quiz.</li>
+<li>You have<span><strong> twenty-four (24)</strong> minutes to complete <strong>four (4)</strong> multiple-choice qu</span>estions in this<span> </span><strong>timed</strong><span> </span>Quiz.</li>
+<li>You have<span> </span><strong>unlimited opportunities</strong><span> </span>to retake this Quiz.</li>
+</ul>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121466" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121466" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
