--- a/WINTER 25-26 COURSE UPDATES/4 Module 3_ Evaluating Accessibility & Creating PDFs/Section 3_ Creating PDFs.html
+++ b/WINTER 25-26 COURSE UPDATES/4 Module 3_ Evaluating Accessibility & Creating PDFs/Section 3_ Creating PDFs.html
@@ -1,65 +1,65 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Section 3: Creating PDFs: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Section 3: Creating PDFs: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
-    <p><a class="Button" title="Module 3: Evaluating Accessibility &amp; Creating PDFs" href="https://usucourses.instructure.com/courses/2879/pages/module-3-evaluating-accessibility-and-creating-pdfs" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-3-evaluating-accessibility-and-creating-pdfs" data-api-returntype="Page">Return to Module 3</a></p>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-3-evaluating-accessibility-and-creating-pdfs" data-api-returntype="Page" data-course-type="wikiPages" data-published="true" href="https://usucourses.instructure.com/courses/2879/pages/module-3-evaluating-accessibility-and-creating-pdfs" title="Module 3: Evaluating Accessibility &amp; Creating PDFs">Return to Module 3</a></p>
 </div>
 <div>
-    <h2>Objectives</h2>
-    <ul>
-        <li><strong>Describe</strong><span>&nbsp;</span>two advantages and two disadvantages of PDF files.</li>
-        <li><strong>State</strong><span>&nbsp;</span>two recommended methods for creating PDFs.</li>
-        <li><strong>Identify</strong> the process for creating a PDF using the Acrobat tab.</li>
-        <li><strong>State</strong> the process for creating a PDF in Acrobat.</li>
-    </ul>
+<h2>Objectives</h2>
+<ul>
+<li><strong>Describe</strong><span> </span>two advantages and two disadvantages of PDF files.</li>
+<li><strong>State</strong><span> </span>two recommended methods for creating PDFs.</li>
+<li><strong>Identify</strong> the process for creating a PDF using the Acrobat tab.</li>
+<li><strong>State</strong> the process for creating a PDF in Acrobat.</li>
+</ul>
 </div>
 <div>
-    <h2>Learning Activities</h2>
-    <ul>
-        <li><a title="Creating PDFs: Part 1" href="https://usucourses.instructure.com/courses/2879/pages/creating-pdfs-part-1" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-pdfs-part-1" data-api-returntype="Page"><strong>Creating PDFs: Part 1</strong> | Video (4:04)</a>
-            <ul>
-                <li><a title="Mac Users: Adobes Cloud Service" href="https://usucourses.instructure.com/courses/2879/pages/mac-users-adobes-cloud-service" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/mac-users-adobes-cloud-service" data-api-returntype="Page"><strong>Mac Users: Adobe's Cloud Service</strong> | Video (3:05)</a></li>
-            </ul>
-        </li>
-        <li><a title="Creating PDFs: Part 2" href="https://usucourses.instructure.com/courses/2879/pages/creating-pdfs-part-2" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-pdfs-part-2" data-api-returntype="Page"><strong>Creating PDFs: Part 2</strong> | Video (2:28)</a></li>
-    </ul>
+<h2>Learning Activities</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-pdfs-part-1" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/creating-pdfs-part-1" title="Creating PDFs: Part 1"><strong>Creating PDFs: Part 1</strong> | Video (4:04)</a>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/mac-users-adobes-cloud-service" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/mac-users-adobes-cloud-service" title="Mac Users: Adobes Cloud Service"><strong>Mac Users: Adobe's Cloud Service</strong> | Video (3:05)</a></li>
+</ul>
+</li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-pdfs-part-2" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/creating-pdfs-part-2" title="Creating PDFs: Part 2"><strong>Creating PDFs: Part 2</strong> | Video (2:28)</a></li>
+</ul>
 </div>
 <div>
-    <h2 id="resource">Resource Links</h2>
-    <ul>
-        <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#pdfs" target="_blank" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23pdfs" data-api-returntype="Page">Microsoft Resources</a></li>
-        <li><a href="https://usucourses.instructure.com/courses/2879/pages/adobe-resources#pdfmaker" target="_blank" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/adobe-resources%23pdfmaker" data-api-returntype="Page">Adobe Resources</a></li>
-    </ul>
-    <h2>Quiz</h2>
-    <ul>
-        <li>Please review all<span>&nbsp;</span><strong>Section 3 Objectives</strong><span>&nbsp;</span>before starting the Quiz.</li>
-        <li>You are free to use any resources that you have developed in the&nbsp;<strong>"open notes"</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;<strong>thirty (30) minutes</strong> to complete <strong>five&nbsp;(5)</strong> multiple-choice qu</span>estions in the<span>&nbsp;</span><strong>timed</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong><span>&nbsp;</span>to&nbsp;retake this&nbsp;Quiz.</li>
-    </ul>
+<h2 id="resource">Resource Links</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23pdfs" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#pdfs" target="_blank">Microsoft Resources</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/adobe-resources%23pdfmaker" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/adobe-resources#pdfmaker" target="_blank">Adobe Resources</a></li>
+</ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review all<span> </span><strong>Section 3 Objectives</strong><span> </span>before starting the Quiz.</li>
+<li>You are free to use any resources that you have developed in the <strong>"open notes"</strong><span> </span>Quiz.</li>
+<li>You have<span> <strong>thirty (30) minutes</strong> to complete <strong>five (5)</strong> multiple-choice qu</span>estions in the<span> </span><strong>timed</strong><span> </span>Quiz.</li>
+<li>You have<span> </span><strong>unlimited opportunities</strong><span> </span>to retake this Quiz.</li>
+</ul>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121468" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121468" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
