--- a/WINTER 25-26 COURSE UPDATES/5 Module 4_ Optimizing PDFs in Acrobat/Section 2_ Checking Accessibility.html
+++ b/WINTER 25-26 COURSE UPDATES/5 Module 4_ Optimizing PDFs in Acrobat/Section 2_ Checking Accessibility.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Section 2: Checking Accessibility: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Section 2: Checking Accessibility: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
-    <p><a class="Button" title="Module 4: Optimizing PDFs in Acrobat" href="https://usucourses.instructure.com/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" data-api-returntype="Page">Return to Module 4</a></p>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" data-api-returntype="Page" data-course-type="wikiPages" data-published="true" href="https://usucourses.instructure.com/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" title="Module 4: Optimizing PDFs in Acrobat">Return to Module 4</a></p>
 </div>
 <div>
-    <h2>Objectives</h2>
-    <ul>
-        <li><strong>Identify</strong> the process for generating the report that is displayed in the <em>Accessibility Checker&nbsp;</em>pane.</li>
-        <li><strong>State</strong> two issues identified in the <em>Accessibility Checker</em> report that will always require a manual review.</li>
-        <li><strong>Identify</strong> the process for changing a PDF's <em>Title</em>.</li>
-    </ul>
+<h2>Objectives</h2>
+<ul>
+<li><strong>Identify</strong> the process for generating the report that is displayed in the <em>Accessibility Checker </em>pane.</li>
+<li><strong>State</strong> two issues identified in the <em>Accessibility Checker</em> report that will always require a manual review.</li>
+<li><strong>Identify</strong> the process for changing a PDF's <em>Title</em>.</li>
+</ul>
 </div>
 <div>
-    <h2>Learning Activities</h2>
-    <h3>Topic</h3>
-    <ul>
-        <li><a title="Checking Accessibility" href="https://usucourses.instructure.com/courses/2879/pages/checking-accessibility" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/checking-accessibility" data-api-returntype="Page"><strong>Checking Accessibility:</strong> Video (7:41) | Examples | Guide</a></li>
-    </ul>
+<h2>Learning Activities</h2>
+<h3>Topic</h3>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/checking-accessibility" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/checking-accessibility" title="Checking Accessibility"><strong>Checking Accessibility:</strong> Video (7:41) | Examples | Guide</a></li>
+</ul>
 </div>
 <div>
-    <h2>Resource Links</h2>
-    <ul>
-        <li><a href="https://helpx.adobe.com/acrobat/using/create-verify-pdf-accessibility.html#check_accessibility_of_PDFs">Accessibility Check</a></li>
-        <li><a href="https://helpx.adobe.com/acrobat/using/create-verify-pdf-accessibility.html#DocTitle">Title</a></li>
-    </ul>
-    <h2>Quiz</h2>
-    <ul>
-        <li>Please review all<span>&nbsp;</span><strong>Section 2 Objectives</strong><span>&nbsp;</span>before starting the Quiz.</li>
-        <li>You are free to use any resources that you have developed in the&nbsp;<strong>"open notes"</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;<strong>twenty-four (24) minutes</strong> to complete <strong>four&nbsp;(4)</strong> multiple-choice qu</span>estions in the<span>&nbsp;</span><strong>timed</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong><span>&nbsp;</span>to&nbsp;retake this&nbsp;Quiz.</li>
-    </ul>
+<h2>Resource Links</h2>
+<ul>
+<li><a href="https://helpx.adobe.com/acrobat/using/create-verify-pdf-accessibility.html#check_accessibility_of_PDFs">Accessibility Check</a></li>
+<li><a href="https://helpx.adobe.com/acrobat/using/create-verify-pdf-accessibility.html#DocTitle">Title</a></li>
+</ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review all<span> </span><strong>Section 2 Objectives</strong><span> </span>before starting the Quiz.</li>
+<li>You are free to use any resources that you have developed in the <strong>"open notes"</strong><span> </span>Quiz.</li>
+<li>You have<span> <strong>twenty-four (24) minutes</strong> to complete <strong>four (4)</strong> multiple-choice qu</span>estions in the<span> </span><strong>timed</strong><span> </span>Quiz.</li>
+<li>You have<span> </span><strong>unlimited opportunities</strong><span> </span>to retake this Quiz.</li>
+</ul>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121474" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121474" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
