--- a/WINTER 25-26 COURSE UPDATES/7 Module 5_ Accessible Excel/Module 5_ Accessible Excel.html
+++ b/WINTER 25-26 COURSE UPDATES/7 Module 5_ Accessible Excel/Module 5_ Accessible Excel.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Module 5: Accessible Excel: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Module 5: Accessible Excel: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
 <h2>Objective</h2>
 <p><strong>Review</strong> basic principles and processes for optimizing document structure, and for utilizing a built-in accessibility checker, in <strong>Excel</strong> documents.</p>
 <h2>Sections</h2>
 <p>This module has six Sections:</p>
 <ul>
-<li><a title="Section 1: Navigating in Excel" href="https://usucourses.instructure.com/courses/2879/pages/section-1-navigating-in-excel" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-1-navigating-in-excel" data-api-returntype="Page"><strong>Section 1:&nbsp;</strong>Navigating in Excel</a></li>
-<li><a title="Section 2: Sheets &amp; Tables" href="https://usucourses.instructure.com/courses/2879/pages/section-2-sheets-and-tables" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-2-sheets-and-tables" data-api-returntype="Page"><strong>Section 2:</strong> Sheets &amp; Tables</a></li>
-<li><a title="Section 3: Images &amp; Links" href="https://usucourses.instructure.com/courses/2879/pages/section-3-images-and-links" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-3-images-and-links" data-api-returntype="Page"><strong>Section 3:</strong> Images &amp; Links</a></li>
-<li><a title="Section 4: Charts" href="https://usucourses.instructure.com/courses/2879/pages/section-4-charts" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-4-charts" data-api-returntype="Page"><strong>Section 4:</strong> Charts</a></li>
-<li><a title="Section 5: Optimizing Workbooks" href="https://usucourses.instructure.com/courses/2879/pages/section-5-optimizing-workbooks" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-5-optimizing-workbooks" data-api-returntype="Page"><strong>Section 5:</strong> Optimizing Workbooks</a></li>
-<li><a title="Section 6: Evaluating Accessibility in Excel" href="https://usucourses.instructure.com/courses/2879/pages/section-6-evaluating-accessibility-in-excel" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-6-evaluating-accessibility-in-excel" data-api-returntype="Page"><strong>Section 6:</strong> Evaluating Accessibility in Excel</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-1-navigating-in-excel" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/section-1-navigating-in-excel" title="Section 1: Navigating in Excel"><strong>Section 1: </strong>Navigating in Excel</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-2-sheets-and-tables" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/section-2-sheets-and-tables" title="Section 2: Sheets &amp; Tables"><strong>Section 2:</strong> Sheets &amp; Tables</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-3-images-and-links" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/section-3-images-and-links" title="Section 3: Images &amp; Links"><strong>Section 3:</strong> Images &amp; Links</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-4-charts" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/section-4-charts" title="Section 4: Charts"><strong>Section 4:</strong> Charts</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-5-optimizing-workbooks" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/section-5-optimizing-workbooks" title="Section 5: Optimizing Workbooks"><strong>Section 5:</strong> Optimizing Workbooks</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-6-evaluating-accessibility-in-excel" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/section-6-evaluating-accessibility-in-excel" title="Section 6: Evaluating Accessibility in Excel"><strong>Section 6:</strong> Evaluating Accessibility in Excel</a></li>
 </ul>
 </div>
 <div>
-<p>Each Section has a Quiz with multiple-choice questions. You should answer<strong> all Section Quiz questions correctly</strong>&nbsp;before moving on to the next Section.</p>
+<p>Each Section has a Quiz with multiple-choice questions. You should answer<strong> all Section Quiz questions correctly</strong> before moving on to the next Section.</p>
 <p>After you have <strong>completed all of the Section Quizzes</strong>, take the Exam.</p>
 </div>
 <div>
@@ -42,12 +42,12 @@
 <p><strong>Exam 5 </strong>has ten questions that have been randomly selected from each of the Module 5 Section Quizzes.</p>
 </div>
 <div>
-<div>&nbsp;</div>
+<div> </div>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121482" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121482" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
