--- a/WINTER 25-26 COURSE UPDATES/7 Module 5_ Accessible Excel/Section 1_ Navigating in Excel.html
+++ b/WINTER 25-26 COURSE UPDATES/7 Module 5_ Accessible Excel/Section 1_ Navigating in Excel.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Section 1: Navigating in Excel: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Section 1: Navigating in Excel: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
-    <p><a class="Button" title="Module 5: Accessible Excel" href="https://usucourses.instructure.com/courses/2879/pages/module-5-accessible-excel" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-5-accessible-excel" data-api-returntype="Page">Return to Module 5</a></p>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-5-accessible-excel" data-api-returntype="Page" data-course-type="wikiPages" data-published="true" href="https://usucourses.instructure.com/courses/2879/pages/module-5-accessible-excel" title="Module 5: Accessible Excel">Return to Module 5</a></p>
 </div>
 <div>
-    <h2>Objectives</h2>
-    <ul>
-        <li><strong>Gain</strong> a high-level understanding of how a user can navigate in Excel without a mouse.</li>
-        <li><strong>Name</strong> three types of graphic elements that can be added to Excel.</li>
-    </ul>
+<h2>Objectives</h2>
+<ul>
+<li><strong>Gain</strong> a high-level understanding of how a user can navigate in Excel without a mouse.</li>
+<li><strong>Name</strong> three types of graphic elements that can be added to Excel.</li>
+</ul>
 </div>
 <div>
-    <h2>Learning Activity</h2>
-    <ul>
-        <li><a title="Navigating in Excel" href="https://usucourses.instructure.com/courses/2879/pages/navigating-in-excel" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/navigating-in-excel" data-api-returntype="Page"><strong>Navigating in Excel</strong> | Video (7:32) | Example | Guide</a></li>
-    </ul>
+<h2>Learning Activity</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/navigating-in-excel" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/navigating-in-excel" title="Navigating in Excel"><strong>Navigating in Excel</strong> | Video (7:32) | Example | Guide</a></li>
+</ul>
 </div>
 <div>
-    <h2>Quiz</h2>
-    <ul>
-        <li>Please review all&nbsp;<strong>Section 1 Objectives</strong>&nbsp;before starting the Quiz.</li>
-        <li>You are free to use any resources that you have developed in the&nbsp;<strong>"open notes"</strong>&nbsp;Quiz.</li>
-        <li>You have <strong>twenty-four (24) minutes</strong> to complete <strong>four</strong> <strong>(4)</strong> multiple-choice questions in the&nbsp;<strong>timed</strong>&nbsp;Quiz.</li>
-        <li>You have&nbsp;<strong>unlimited opportunities</strong>&nbsp;to&nbsp;retake this&nbsp;Quiz.</li>
-    </ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review all <strong>Section 1 Objectives</strong> before starting the Quiz.</li>
+<li>You are free to use any resources that you have developed in the <strong>"open notes"</strong> Quiz.</li>
+<li>You have <strong>twenty-four (24) minutes</strong> to complete <strong>four</strong> <strong>(4)</strong> multiple-choice questions in the <strong>timed</strong> Quiz.</li>
+<li>You have <strong>unlimited opportunities</strong> to retake this Quiz.</li>
+</ul>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121483" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121483" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
