--- a/WINTER 25-26 COURSE UPDATES/2 Module 1_ Document Content/Section 5_ Optimizing Writing.html
+++ b/WINTER 25-26 COURSE UPDATES/2 Module 1_ Document Content/Section 5_ Optimizing Writing.html
@@ -1,70 +1,70 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Section 5: Optimizing Writing: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Section 5: Optimizing Writing: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
-    <p><a class="Button" title="Module 1: Document Content" href="https://usucourses.instructure.com/courses/2879/pages/module-1-document-content" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-1-document-content" data-api-returntype="Page">Return to Module 1</a></p>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-1-document-content" data-api-returntype="Page" data-course-type="wikiPages" data-published="true" href="https://usucourses.instructure.com/courses/2879/pages/module-1-document-content" title="Module 1: Document Content">Return to Module 1</a></p>
 </div>
 <div>
-    <h2>Objectives</h2>
-    <ul>
-        <li><strong>State</strong> six principles of plain language that should be considered.</li>
-        <li><strong>Identify</strong> how to check and fix spelling and grammar issues.</li>
-        <li><strong>Identify</strong> how to use the <em>Readability Statistics</em> tool.</li>
-        <li><strong>Explain</strong> best practices for presenting and formatting text.</li>
-    </ul>
+<h2>Objectives</h2>
+<ul>
+<li><strong>State</strong> six principles of plain language that should be considered.</li>
+<li><strong>Identify</strong> how to check and fix spelling and grammar issues.</li>
+<li><strong>Identify</strong> how to use the <em>Readability Statistics</em> tool.</li>
+<li><strong>Explain</strong> best practices for presenting and formatting text.</li>
+</ul>
 </div>
 <div>
-    <h2>Learning Activities</h2>
-    <ul>
-        <li><a title="Plain Language, Spelling, and Grammar" href="https://usucourses.instructure.com/courses/2879/pages/plain-language-spelling-and-grammar" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/plain-language-spelling-and-grammar" data-api-returntype="Page"><strong>Plain Language, Spelling, and Grammar</strong> | Video (9:02) | Example Files | Guide</a></li>
-        <li><a title="Readability" href="https://usucourses.instructure.com/courses/2879/pages/readability" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/readability" data-api-returntype="Page"><strong>Readability </strong>| Video (4:35) | Example File | Guide</a></li>
-        <li><a title="Legible Documents" href="https://usucourses.instructure.com/courses/2879/pages/legible-documents" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/legible-documents" data-api-returntype="Page"><strong>Legible Documents</strong>&nbsp;| Video (4:45) | Guide</a></li>
-    </ul>
+<h2>Learning Activities</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/plain-language-spelling-and-grammar" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/plain-language-spelling-and-grammar" title="Plain Language, Spelling, and Grammar"><strong>Plain Language, Spelling, and Grammar</strong> | Video (9:02) | Example Files | Guide</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/readability" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/readability" title="Readability"><strong>Readability </strong>| Video (4:35) | Example File | Guide</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/legible-documents" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/legible-documents" title="Legible Documents"><strong>Legible Documents</strong> | Video (4:45) | Guide</a></li>
+</ul>
 </div>
 <div>
-    <h2>Resource Links</h2>
-    <ul>
-        <li><a href="https://owl.purdue.edu/owl/general_writing/academic_writing/active_and_passive_voice/active_versus_passive_voice.html" target="_blank">Active Versus Passive Voice</a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Flesch%E2%80%93Kincaid_readability_tests" target="_blank">Flesch-Kincaid&nbsp;readability tests</a></li>
-        <li><a href="https://webaim.org/techniques/fonts/" target="_blank">Fonts</a></li>
-        <li><a href="http://www.hemingwayapp.com/" target="_blank">Hemingway app</a></li>
-        <li><a href="https://www.nih.gov/institutes-nih/nih-office-director/office-communications-public-liaison/clear-communication/plain-language/resources" target="_blank">National Institutes of Health Plain Language resources</a></li>
-        <li><a href="https://www.plainlanguage.gov/" target="_blank">Plainlanguage.gov</a></li>
-        <li><a href="https://readable.com/" target="_blank">Readable.com</a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Readability" target="_blank">Readability</a></li>
-        <li><a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/meaning-supplements.html" target="_blank">WCAG Reading Level</a></li>
-        <li><a class="inline_disabled" href="https://webaim.org/techniques/writing/" target="_blank">Writing Clearly and Simply</a></li>
-    </ul>
-    <h2>Quiz</h2>
-    <ul>
-        <li>Please review all&nbsp;<strong>Section 5 Objectives</strong>&nbsp;before starting the Quiz.</li>
-        <li>You are free to use any resources that you have developed in the&nbsp;<strong>"open notes"</strong>&nbsp;Quiz.</li>
-        <li>You have&nbsp;<strong>forty-eight (48) minutes</strong> to complete eight<strong>&nbsp;(8)</strong> multiple-choice questions in the&nbsp;<strong>timed</strong>&nbsp;Quiz.</li>
-        <li>You have&nbsp;<strong>unlimited opportunities</strong>&nbsp;to&nbsp;retake this&nbsp;Quiz.</li>
-    </ul>
+<h2>Resource Links</h2>
+<ul>
+<li><a href="https://owl.purdue.edu/owl/general_writing/academic_writing/active_and_passive_voice/active_versus_passive_voice.html" target="_blank">Active Versus Passive Voice</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Flesch%E2%80%93Kincaid_readability_tests" target="_blank">Flesch-Kincaid readability tests</a></li>
+<li><a href="https://webaim.org/techniques/fonts/" target="_blank">Fonts</a></li>
+<li><a href="http://www.hemingwayapp.com/" target="_blank">Hemingway app</a></li>
+<li><a href="https://www.nih.gov/institutes-nih/nih-office-director/office-communications-public-liaison/clear-communication/plain-language/resources" target="_blank">National Institutes of Health Plain Language resources</a></li>
+<li><a href="https://www.plainlanguage.gov/" target="_blank">Plainlanguage.gov</a></li>
+<li><a href="https://readable.com/" target="_blank">Readable.com</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Readability" target="_blank">Readability</a></li>
+<li><a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/meaning-supplements.html" target="_blank">WCAG Reading Level</a></li>
+<li><a class="inline_disabled" href="https://webaim.org/techniques/writing/" target="_blank">Writing Clearly and Simply</a></li>
+</ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review all <strong>Section 5 Objectives</strong> before starting the Quiz.</li>
+<li>You are free to use any resources that you have developed in the <strong>"open notes"</strong> Quiz.</li>
+<li>You have <strong>forty-eight (48) minutes</strong> to complete eight<strong> (8)</strong> multiple-choice questions in the <strong>timed</strong> Quiz.</li>
+<li>You have <strong>unlimited opportunities</strong> to retake this Quiz.</li>
+</ul>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121450" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121450" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
