--- a/WINTER 25-26 COURSE UPDATES/3 Module 2_ Document Structure/Module 2_ Document Structure.html
+++ b/WINTER 25-26 COURSE UPDATES/3 Module 2_ Document Structure/Module 2_ Document Structure.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Module 2: Document Structure: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Module 2: Document Structure: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
 <h2>Objective</h2>
 <ul>
 <li><span><strong>Review</strong> basic principles and processes for optimizing the accessibility of document structure in Microsoft Word and PowerPoint.</span></li>
@@ -27,22 +27,22 @@
 <h2>Sections</h2>
 <p>This module has four Sections:</p>
 <ul>
-<li><a title="Section 1: Headings in Word" href="https://usucourses.instructure.com/courses/2879/pages/section-1-headings-in-word" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-1-headings-in-word" data-api-returntype="Page"><strong>Section 1:</strong>&nbsp;Headings in Word</a></li>
-<li><a title="Section 2: Optimizing PowerPoint Presentations" href="https://usucourses.instructure.com/courses/2879/pages/section-2-optimizing-powerpoint-presentations" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-2-optimizing-powerpoint-presentations" data-api-returntype="Page"><strong>Section 2:</strong> Optimizing PowerPoint Presentations</a></li>
-<li><a title="Section 3: Lists &amp; Columns" href="https://usucourses.instructure.com/courses/2879/pages/section-3-lists-and-columns" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-3-lists-and-columns" data-api-returntype="Page"><strong>Section 3:</strong>&nbsp;Lists &amp; Columns</a></li>
-<li><a title="Section 4: Tables" href="https://usucourses.instructure.com/courses/2879/pages/section-4-tables" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-4-tables" data-api-returntype="Page"><strong>Section 4:</strong>&nbsp; Tables</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-1-headings-in-word" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/section-1-headings-in-word" title="Section 1: Headings in Word"><strong>Section 1:</strong> Headings in Word</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-2-optimizing-powerpoint-presentations" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/section-2-optimizing-powerpoint-presentations" title="Section 2: Optimizing PowerPoint Presentations"><strong>Section 2:</strong> Optimizing PowerPoint Presentations</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-3-lists-and-columns" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/section-3-lists-and-columns" title="Section 3: Lists &amp; Columns"><strong>Section 3:</strong> Lists &amp; Columns</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-4-tables" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/section-4-tables" title="Section 4: Tables"><strong>Section 4:</strong>  Tables</a></li>
 </ul>
-<p>Each Section has a Quiz with multiple-choice questions. You should answer<strong> all Section Quiz questions correctly</strong><span>&nbsp;</span>before moving on to the next Section.</p>
+<p>Each Section has a Quiz with multiple-choice questions. You should answer<strong> all Section Quiz questions correctly</strong><span> </span>before moving on to the next Section.</p>
 <p>After you have <strong>completed all of the Section Quizzes</strong>, take the Exam.</p>
 </div>
 <div>
 <h2>Exam</h2>
-<p><strong>Exam&nbsp;2</strong> has ten questions that have been randomly selected from each of the Module 2 Section Quizzes.</p>
+<p><strong>Exam 2</strong> has ten questions that have been randomly selected from each of the Module 2 Section Quizzes.</p>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121453" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121453" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
