--- a/WINTER 25-26 COURSE UPDATES/5 Module 4_ Optimizing PDFs in Acrobat/Section 3_ Reading Order Tool.html
+++ b/WINTER 25-26 COURSE UPDATES/5 Module 4_ Optimizing PDFs in Acrobat/Section 3_ Reading Order Tool.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Section 3: Reading Order Tool: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Section 3: Reading Order Tool: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
-    <p><a class="Button" title="Module 4: Optimizing PDFs in Acrobat" href="https://usucourses.instructure.com/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" data-api-returntype="Page">Return to Module 4</a></p>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" data-api-returntype="Page" data-course-type="wikiPages" data-published="true" href="https://usucourses.instructure.com/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" title="Module 4: Optimizing PDFs in Acrobat">Return to Module 4</a></p>
 </div>
 <div>
-    <h2>Objectives</h2>
-    <ul>
-        <li><strong>State</strong> the two options for viewing "page content groups" in the <em>Reading Order</em> tool.</li>
-        <li><strong>Identify</strong> the process for using the <em>Reading Order</em> tool to remove an element from the tags tree.</li>
-        <li><strong>Describe</strong> the method for tagging an untagged element.</li>
-    </ul>
+<h2>Objectives</h2>
+<ul>
+<li><strong>State</strong> the two options for viewing "page content groups" in the <em>Reading Order</em> tool.</li>
+<li><strong>Identify</strong> the process for using the <em>Reading Order</em> tool to remove an element from the tags tree.</li>
+<li><strong>Describe</strong> the method for tagging an untagged element.</li>
+</ul>
 </div>
 <div>
-    <h2>Learning Activities</h2>
-    <h3>Topic</h3>
-    <ul>
-        <li><a title="Reading Order Tool" href="https://usucourses.instructure.com/courses/2879/pages/reading-order-tool" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/reading-order-tool" data-api-returntype="Page"><strong>Reading Order Tool </strong>| Video (6:08) | Example | Guide</a></li>
-    </ul>
+<h2>Learning Activities</h2>
+<h3>Topic</h3>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/reading-order-tool" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/reading-order-tool" title="Reading Order Tool"><strong>Reading Order Tool </strong>| Video (6:08) | Example | Guide</a></li>
+</ul>
 </div>
 <div>
-    <h2>Resource Links</h2>
-    <ul>
-        <li><a href="https://helpx.adobe.com/acrobat/using/touch-reading-order-tool-pdfs.html">Reading Order tool overview</a></li>
-        <li><a href="https://helpx.adobe.com/acrobat/using/touch-reading-order-tool-pdfs.html#check_and_correct_reading_order_acrobat_pro">Check and correct reading order</a></li>
-        <li><a href="https://helpx.adobe.com/acrobat/using/touch-reading-order-tool-pdfs.html#edit_tags_with_the_reading_order_tool_acrobat_pro">Edit tags with the Reading Order tool</a></li>
-        <li><a href="https://helpx.adobe.com/acrobat/using/touch-reading-order-tool-pdfs.html#edit_tags_for_figures_and_tables_acrobat_pro">Edit tags for figures</a></li>
-    </ul>
-    <h2>Quiz</h2>
-    <ul>
-        <li>Please review all<span>&nbsp;</span><strong>Section 3 Objectives</strong><span>&nbsp;</span>before starting this Quiz.</li>
-        <li>You are free to use any resources that you have developed in this&nbsp;<strong>"open notes"</strong><span>&nbsp;</span>Quiz.</li>
-        <li><span>You have <strong>twenty-four (24) minutes</strong>&nbsp;to complete <strong>four (4)</strong>&nbsp;multiple-choice questions in</span><span>&nbsp;</span>this<span>&nbsp;</span><strong>timed</strong><span>&nbsp;</span>Quiz.</li>
-        <li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong><span>&nbsp;</span>to&nbsp;retake this&nbsp;Quiz.</li>
-    </ul>
+<h2>Resource Links</h2>
+<ul>
+<li><a href="https://helpx.adobe.com/acrobat/using/touch-reading-order-tool-pdfs.html">Reading Order tool overview</a></li>
+<li><a href="https://helpx.adobe.com/acrobat/using/touch-reading-order-tool-pdfs.html#check_and_correct_reading_order_acrobat_pro">Check and correct reading order</a></li>
+<li><a href="https://helpx.adobe.com/acrobat/using/touch-reading-order-tool-pdfs.html#edit_tags_with_the_reading_order_tool_acrobat_pro">Edit tags with the Reading Order tool</a></li>
+<li><a href="https://helpx.adobe.com/acrobat/using/touch-reading-order-tool-pdfs.html#edit_tags_for_figures_and_tables_acrobat_pro">Edit tags for figures</a></li>
+</ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review all<span> </span><strong>Section 3 Objectives</strong><span> </span>before starting this Quiz.</li>
+<li>You are free to use any resources that you have developed in this <strong>"open notes"</strong><span> </span>Quiz.</li>
+<li><span>You have <strong>twenty-four (24) minutes</strong> to complete <strong>four (4)</strong> multiple-choice questions in</span><span> </span>this<span> </span><strong>timed</strong><span> </span>Quiz.</li>
+<li>You have<span> </span><strong>unlimited opportunities</strong><span> </span>to retake this Quiz.</li>
+</ul>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121476" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121476" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
