--- a/WINTER 25-26 COURSE UPDATES/7 Module 5_ Accessible Excel/Section 4_ Charts.html
+++ b/WINTER 25-26 COURSE UPDATES/7 Module 5_ Accessible Excel/Section 4_ Charts.html
@@ -1,84 +1,84 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Section 4: Charts: WINTER 25-26 COURSE UPDATES</title>
-    
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Section 4: Charts: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div class="user_content">
-        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
-    <p><a class="Button" title="Module 5: Accessible Excel" href="https://usucourses.instructure.com/courses/2879/pages/module-5-accessible-excel" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-5-accessible-excel" data-api-returntype="Page">Return to Module 5</a></p>
+<div class="content" style="margin-left: 30px; margin-right: 30px;">
+<div class="user_content">
+<!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-5-accessible-excel" data-api-returntype="Page" data-course-type="wikiPages" data-published="true" href="https://usucourses.instructure.com/courses/2879/pages/module-5-accessible-excel" title="Module 5: Accessible Excel">Return to Module 5</a></p>
 </div>
 <div>
-    <h2>Objectives</h2>
-    <ul>
-        <li><strong>State</strong> four keys for accessible charts.</li>
-        <li><strong>Identify</strong> two methods for providing access to a chart's data in text format.</li>
-        <li><strong>Describe</strong> one method for increasing a chart's whitespace.</li>
-        <li><strong>State</strong> two recommendations for labeling a chart's data elements.</li>
-        <li><strong>Describe</strong> the process for adding an <em>Alt Text</em> value to a <em>Chart Area</em>.</li>
-        <li><strong>Identify</strong> the process for pasting an Excel chart into Word and PowerPoint.</li>
-        <li><strong>Identify</strong> the processes for pasting an Excel data table into Word or PowerPoint.</li>
-    </ul>
+<h2>Objectives</h2>
+<ul>
+<li><strong>State</strong> four keys for accessible charts.</li>
+<li><strong>Identify</strong> two methods for providing access to a chart's data in text format.</li>
+<li><strong>Describe</strong> one method for increasing a chart's whitespace.</li>
+<li><strong>State</strong> two recommendations for labeling a chart's data elements.</li>
+<li><strong>Describe</strong> the process for adding an <em>Alt Text</em> value to a <em>Chart Area</em>.</li>
+<li><strong>Identify</strong> the process for pasting an Excel chart into Word and PowerPoint.</li>
+<li><strong>Identify</strong> the processes for pasting an Excel data table into Word or PowerPoint.</li>
+</ul>
 </div>
 <div>
-    <h2>Learning Activities</h2>
-    <ul>
-        <li><a title="Creating Accessible Charts: Part 1" href="https://usucourses.instructure.com/courses/2879/pages/creating-accessible-charts-part-1" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-accessible-charts-part-1" data-api-returntype="Page"><strong>Creating Accessible Charts: Part 1</strong> | Video (10:12) | Example | Guide</a></li>
-        <li><a title="Creating Accessible Charts: Part 2" href="https://usucourses.instructure.com/courses/2879/pages/creating-accessible-charts-part-2" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-accessible-charts-part-2" data-api-returntype="Page"><strong>Creating Accessible Charts: Part 2</strong> | Video (7:52) | Example | Guide</a></li>
-        <li><a title="Creating Accessible Charts: Part 3" href="https://usucourses.instructure.com/courses/2879/pages/creating-accessible-charts-part-3" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-accessible-charts-part-3" data-api-returntype="Page"><strong>Creating Accessible Charts: Part 3</strong> | Video (10:00) | Examples | Guide</a></li>
-    </ul>
+<h2>Learning Activities</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-accessible-charts-part-1" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/creating-accessible-charts-part-1" title="Creating Accessible Charts: Part 1"><strong>Creating Accessible Charts: Part 1</strong> | Video (10:12) | Example | Guide</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-accessible-charts-part-2" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/creating-accessible-charts-part-2" title="Creating Accessible Charts: Part 2"><strong>Creating Accessible Charts: Part 2</strong> | Video (7:52) | Example | Guide</a></li>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/creating-accessible-charts-part-3" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/creating-accessible-charts-part-3" title="Creating Accessible Charts: Part 3"><strong>Creating Accessible Charts: Part 3</strong> | Video (10:00) | Examples | Guide</a></li>
+</ul>
 </div>
 <div>
-    <h2>Resource Links</h2>
-    <ul>
-        <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#charts" target="_blank" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23charts" data-api-returntype="Page">Microsoft Resources</a>
-            <ul>
-                <li>Available chart types in Office
+<h2>Resource Links</h2>
+<ul>
+<li><a data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23charts" data-api-returntype="Page" href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#charts" target="_blank">Microsoft Resources</a>
+<ul>
+<li>Available chart types in Office
                     <ul>
-                        <li><a href="https://support.microsoft.com/en-us/office/available-chart-types-in-office-a6187218-807e-4103-9e0a-27cdb19afb90#OfficeVersion=Windows" target="_blank">Windows</a></li>
-                        <li><a href="https://support.microsoft.com/en-us/office/available-chart-types-in-office-a6187218-807e-4103-9e0a-27cdb19afb90#OfficeVersion=macOS" target="_blank">Mac</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-        <li>Create a chart from start to finish
+<li><a href="https://support.microsoft.com/en-us/office/available-chart-types-in-office-a6187218-807e-4103-9e0a-27cdb19afb90#OfficeVersion=Windows" target="_blank">Windows</a></li>
+<li><a href="https://support.microsoft.com/en-us/office/available-chart-types-in-office-a6187218-807e-4103-9e0a-27cdb19afb90#OfficeVersion=macOS" target="_blank">Mac</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li>Create a chart from start to finish
             <ul>
-                <li style="list-style-type: none;">
-                    <ul>
-                        <li><a href="https://support.microsoft.com/en-us/office/create-a-chart-from-start-to-finish-0baf399e-dd61-4e18-8a73-b3fd5d5680c2#OfficeVersion=Windows" target="_blank">Windows</a></li>
-                        <li><a href="https://support.microsoft.com/en-us/office/create-a-chart-from-start-to-finish-0baf399e-dd61-4e18-8a73-b3fd5d5680c2#OfficeVersion=macOS" target="_blank">Mac</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-        <li><a href="https://www.w3.org/WAI/WCAG21/Understanding/non-text-contrast.html#pie-charts" target="_blank">Understanding Success Criterion 1.4.11: Non-text Contrast | Pie Charts</a></li>
-    </ul>
-    <h2>Quiz</h2>
-    <ul>
-        <li>Please review all&nbsp;<strong>Section 4 Objectives</strong>&nbsp;before starting the Quiz.</li>
-        <li>You are free to use any resources that you have developed in the&nbsp;<strong>"open notes"</strong>&nbsp;Quiz.</li>
-        <li>You have <strong>forty-two&nbsp;(42) minutes</strong> to complete <strong>seven</strong> <strong>(7)</strong> multiple-choice questions in the&nbsp;<strong>timed</strong>&nbsp;Quiz.</li>
-        <li>You have&nbsp;<strong>unlimited opportunities</strong>&nbsp;to&nbsp;retake this&nbsp;Quiz.</li>
-    </ul>
+<li style="list-style-type: none;">
+<ul>
+<li><a href="https://support.microsoft.com/en-us/office/create-a-chart-from-start-to-finish-0baf399e-dd61-4e18-8a73-b3fd5d5680c2#OfficeVersion=Windows" target="_blank">Windows</a></li>
+<li><a href="https://support.microsoft.com/en-us/office/create-a-chart-from-start-to-finish-0baf399e-dd61-4e18-8a73-b3fd5d5680c2#OfficeVersion=macOS" target="_blank">Mac</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="https://www.w3.org/WAI/WCAG21/Understanding/non-text-contrast.html#pie-charts" target="_blank">Understanding Success Criterion 1.4.11: Non-text Contrast | Pie Charts</a></li>
+</ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review all <strong>Section 4 Objectives</strong> before starting the Quiz.</li>
+<li>You are free to use any resources that you have developed in the <strong>"open notes"</strong> Quiz.</li>
+<li>You have <strong>forty-two (42) minutes</strong> to complete <strong>seven</strong> <strong>(7)</strong> multiple-choice questions in the <strong>timed</strong> Quiz.</li>
+<li>You have <strong>unlimited opportunities</strong> to retake this Quiz.</li>
+</ul>
 </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121489" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121489" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
